Issue 324 (#334)
* Import more than just the default text, include all authored content in news details page
* change youtube embed
* fix header width causing scrollbars
* load the 3rd party script when the share items come into view
* remove chrome warning in browser for embed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,7 +99,7 @@
 
   header {
     height: var(--header-height);
-    width: 100vw;
+    width: 100%;
   }
 
   helix-sidekick[pushdown] ~ header { top: 49px }
